--- a/aboutme.html
+++ b/aboutme.html
@@ -49,7 +49,7 @@
                     I've worked as a city government reporter for a <a href="https://www.idahopress.com/"
                         target="_blank"><span style="color:#1cb117; background-color: black;"> local newspaper in Idaho,</span></a> for <a
                         href="https://www.refinitiv.com/en/products/eikon-trading-software" target="_blank"><span
-                            style="color:#ff8000; background-color: black;">Reuters-Refinitiv terminal
+                            style="color:#ff8000; background-color: white;">Reuters-Refinitiv terminal
                             service Eikon</span></a> and helped lead a team at a media startup, <a
                         href="https://glance.com/" target="_blank"><span style="color:#FF0049; background-color: #000d74;">Glance.</span></a>
                 </p>
