--- a/stories/ny-state-spills/index.html
+++ b/stories/ny-state-spills/index.html
@@ -38,9 +38,9 @@
         </a>
     </nav>
     <br>
-    <div class="aboutme-div">
-        <h2>Westchester reports most number of hazardous spill incidents in New York</h2>
-        <p><strong>Albany reports most amount of stuff spilled</strong></p>
+    <h2>Westchester reports most number of hazardous spill incidents in New York</h2>
+    <p><strong>Albany reports most amount of stuff spilled</strong></p>
+    <div class="story-div">
         <p>
             In the last five years, New York recorded over 61,000 hazardous material spills across the state. Of the 72
             counties from the state included in the dataset, Westchester had the most number of spill incidents
