--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Areena Arora" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://areenaarora.com/" />
+        <meta property="og:description"
+            content="Hi! I'm Areena, a data journalist and current grad student at Columbia University." />
+        <meta property="og:locale" content="en_US" />
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="icon" type="image/x-icon" href="sunflower.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
