--- a/stories/Uttarakhand-floods/index.html
+++ b/stories/Uttarakhand-floods/index.html
@@ -2,6 +2,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta property="og:Remembering Uttarakhand Floods" content="Remembering Uttarakhand Floods" />
+    <meta property="og:image" content="kedarnath-temple.jpg" />
+    <meta property="og:url" content="https://areenaarora.com/stories/uttarakhand-floods/" />
+    <meta property="og:description"
+        content="The terrain has long been a cause of concern when it comes to developing infrastructure there. It is also known as Dev Bhoomi, land of the Gods, home to major Hindu temples and pilgrimage sites." />
+
     <link rel="stylesheet" href="../../stylesheet.css">
     <link rel="icon" type="image/x-icon" href="sunflower.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
